--- a/english.html
+++ b/english.html
@@ -6,12 +6,12 @@
     <title>Yang Chen's Homepage</title>
 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content=" ">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="description" content="Yunhe Wang is currently a senior researcher at Huawei Noah's Ark Lab">
+    <meta name="description" content=" ">
     <meta name="keywords"
-          content="Yunhe Wang, 王云鹤, wangyunhe, Yunhe, Wang, Deep Learning, Huawei, PKU, Computer, Vision">
-    <meta name="author" content="Yunhe Wang"/>
+          content=" ">
+    <meta name="author" content="Yang"/>
 
     <link rel="stylesheet" href="w3.css">
 
