--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content=" ">
     <meta name="keywords"
           content=" ">
-    <meta name="author" content="Yunhe Wang"/>
+    <meta name="author" content="Yang"/>
 
     <link rel="stylesheet" href="w3.css">
 
