--- a/index.html
+++ b/index.html
@@ -122,17 +122,18 @@
 <div class="w3-container w3-light-grey w3-padding-32 w3-justify" style="max-width:1500px" id="cv">
     <h2>个人履历</h2>
     <h4><p>
-        <li> 2018年4月至今 教授 博士生导师/IEEE senior member 计算机科学与工程学院，东南大学，期间2014年9月到2015年9月在美国威斯康辛麦迪逊大学进行访问学者的工作。
+        <li> 2007年到东南大学计算机科学与工程学院工作至今，现为教授/博士生导师。
         </li>
-        <li>2011年3月-2013年3月 博士后 Institut National de la Santé et de la Recherche Médicale (INSERM,
-            法国国家健康研究院), 导师: Prof. Jean-Louis COATRIEUX and Christine TOUMOULIN。
+        <li>2014年9月到2015年9月在美国威斯康辛麦迪逊大学进行访问学者的工作。
         </li>
-        <li> 2008年3月至2010年3月， 博士后 香港中文大学，电子工程系，导师：Prof. Emma MACPHERSON。
+        <li> 2011年3月-2013年3月 博士后 Institut National de la Santé et de la Recherche Médicale (INSERM, 法国国家健康研究院), 导师: Prof. Jean-Louis COATRIEUX and Christine TOUMOULIN。
         </li>
-        <li>2002年8月至2007年8月， 博士 第一军医大学，生物医学工程专业。
+        <li>2008年3月至2010年3月， 博士后 香港中文大学，电子工程系，导师：Prof. Emma MACPHERSON。
         </li>
-        <li> 1996年8月至2001年6月， 学士 第一军医大学，生物医学工程专业。
+        <li>  2002年8月至2007年8月， 博士 第一军医大学，生物医学工程专业。
         </li>
+        <li>1996年8月至2001年6月， 学士 第一军医大学，生物医学工程专业。
+        </li> 
         </p>
 </div>
 <!-- The Projects Section -->
