--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         </li>
         <br>
         <li>
-            从2008年开始，主持国家杰出青年科学基金、国家自然基金、973科技计划、863科技计划、江苏省自然科学基金、国家重点研发计划、江苏省科技计划重点项目、广东省科技创新战略计划等各类基金项目10余项。
-            目前在研项目包括2项国家自然基金项目、3项国家重点研发项目、1项江苏省科技计划重点项目和1项广东省科技创新战略项目。<br>
+            从2008年开始，主持国家杰出青年科学基金、973科技计划、863科技计划、江苏省自然科学基金、国家重点研发计划、江苏省科技计划重点项目、广东省科技创新战略计划等各类基金项目10余项。
+            目前在研项目包括2项国家自然基金项目、3项国家重点研发项目、1项江苏省科技计划重点项目和1项广东省科技创新战略项目：<br>
         <br>
 
         <li>先后在《IEEE Transactions on Medical Imaging》、《IEEE Transactions on Image Processing》、《IEEE
