--- a/index.html
+++ b/index.html
@@ -200,11 +200,12 @@
         <li><strong>个人评价：</strong>本人治学严谨、认真务实、勇于创新、视野广阔，不仅教会学生专业知识，还教会他们学术问题的统筹思考方法，而且时常督促、鼓励、指导学生进行课题研究，还和他们一起讨论、思考和解决课题中遇到的难题，三年朝夕相处，几乎所有研究生都能够发表一篇英文期刊论文、撰写一项发明专利。由于本人人脉丰富，很多优秀的毕业生被推荐到斯坦福、耶鲁等世界名牌大学攻读博士学位。
         </li>
         <br>
-        <li><strong>硕士就业前景：</strong>（1）被推荐到斯坦福、耶鲁等世界名牌大学读博；（2）国内外知名公司，且针对就业的研究生，可由导师推荐到校企合作的东南大学研究生实习基地做算法毕业课题，其中企业提供相关住宿和补贴。
+        <li><strong>硕博士就业前景：</strong>（1）被推荐到斯坦福、耶鲁等世界名牌大学读博；（2）国内外知名公司，且针对就业的研究生，可由导师推荐到校企合作的东南大学研究生实习基地做算法毕业课题，其中企业提供相关住宿和补贴。
         </li>
         <br>
         <li><strong>人才需求：</strong></li>
-        博士后1-2名/年、博士生1-2名/年、硕士生2-10名/年、本科生1-5名/年。邮件地址： <a
+        博士后1-2名/年、博士生1-2名/年、硕士生2-10名/年、本科生1-5名/年。<br>
+        欢迎与我联系申请东南大学博士后（上岗正高、上高副高、至善博士后）职位！邮件地址： <a
             href="mailto:chenyang.list@seu.edu.cn">chenyang.list@seu.edu.cn</a>.
         </p>
 </div>
