--- a/english.html
+++ b/english.html
@@ -71,7 +71,7 @@
         <a href="#award" class="w3-bar-item w3-button">AWARDS</a>
         <a href="#talks" class="w3-bar-item w3-button">ACHIEVEMENT</a>
         <a href="#publications" class="w3-bar-item w3-button">PAPER</a>
-        <a href="english.html" class="w3-bar-item w3-button">中文</a>
+        <a href="index.html" class="w3-bar-item w3-button">中文</a>
 
     </div>
 </nav>
