--- a/english.html
+++ b/english.html
@@ -101,15 +101,10 @@
         <img src="images/avatar15.jpg" class="w3-circle" alt="icon">
         <h1>陈阳</h1>
 
-        <h5>东南大学计算机科学与工程学院教授、博士生导师、国家杰出青年科学基金获得者；影像科学与技术实验室常务副主任；</h5>
+       
         <h5><p class="w3-justify"
                style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:1200px">
-            IEEE高级会员；东南大学计算机网络与信息集成教育部重点实验室常务副主任；中法生物医学信息研究中心中方副主任；中国生物医学工程学会医学图像信息与控制分会副主任委员；中国图像图形学会医学影像委员会委员；江苏省人工智能学会医学图像专委会常务委员；担任国际期刊《IEEE
-            Transactions on Computational Imaging (TCI)》和《BMC Medical Imaging》编辑、国际期刊《EURASIP Journal on Advances
-            in Signal Processing (JASP)》的“Advanced Signal Processing In Medical Image Reconstruction with Low
-            SNR”特刊的责任主编、国际期刊《International Journal of Biomedical Imaging》的“Advanced Signal Processing in
-            Medical Image Reconstruction (ASPMI)”特刊的责任主编、中国卓越期刊《Intelligent
-            Medicine》编委和中文核心期刊《CT理论与应用研究》专栏主编。</p></h5>
+            Born in 1979,Doctor/Postdoctor,a professor and doctoral supervisor at the School of Computer Science and Engineering,Southeast University;Imaging Science and Technology Laboratory Executive Deputy Director; IEEE senior member;Key Laboratory of Computer Network and Information Integration, Ministry of Education, Southeast University Executive Deputy Director;IEEE Transactions on Computational Imaging Associate Edito。</p></h5>
         <p class="w3-center">
             <a href="mailto:chenyang.list@seu.edu.cn">Email</a> &nbsp/&nbsp
             <a href="https://scholar.google.com/citations?hl=zh-CN&user=LxjxwpgAAAAJ">Google Scholar</a>
@@ -122,17 +117,19 @@
 <div class="w3-container w3-light-grey w3-padding-32 w3-justify" style="max-width:1500px" id="cv">
     <h2>个人履历</h2>
     <h4><p>
-        <li> 2007年到东南大学计算机科学与工程学院工作至今，现为教授/博士生导师。
+        <li> 2007 - Now, Professor and Doctoral supervisor at School of computer science and engineering, Southeast University.
         </li>
-        <li>2014年9月到2015年9月在美国威斯康辛麦迪逊大学进行访问学者的工作。
+        <li>2014.9 - 2015.9, worked as a visiting scholar in University of Wisconsin-Madison, USA.
         </li>
-        <li> 2011年3月-2013年3月 博士后 Institut National de la Santé et de la Recherche Médicale (INSERM, 法国国家健康研究院), 导师: Prof. Jean-Louis COATRIEUX and Christine TOUMOULIN。
+        <li>2011.3 - 2013.3, Postdoctor,Institut National de la Santé et de la Recherche Médicale(INSERM),Doctoral Supervisor:Prof.Jean-Louis COATRIEUX and Christine TOUMOULIN.
         </li>
-        <li>2008年3月至2010年3月， 博士后 香港中文大学，电子工程系，导师：Prof. Emma MACPHERSON。
+        <li>2008.3 - 2010.3, Postdoctor,Chinese University of Hong Kong,Department of Electronic Engineering,Doctoral Supervisor:Prof. Emma MACPHERSON.
         </li>
-        <li>  2002年8月至2007年8月， 博士 第一军医大学，生物医学工程专业。
+        <li>2002.8 - 2007.8, Doctor, First Military Medical University,Biomedical Engineering.
         </li>
-        <li>1996年8月至2001年6月， 学士 第一军医大学，生物医学工程专业。
+        <li>1996.8 - 2001.6, Bachelor,First Military Medical University,Biomedical Engineering.
+
+
         </li> 
         </p>
 </div>
@@ -142,13 +139,9 @@
     <p class="w3-justify">
 
     <h4>
-        <li><strong>研究方向为：</strong>（1）人工智能算法及其应用；（2）计算机视觉；（3）模式识别；（4）医学图像成像、分析与处理；（5）医学信号图像处理与分析。主要研究方向包括：智能影像处理；医疗图像重建与分析三维可视化及病理；低剂量CT成像等。
+        <li><strong>Research Direction:</strong>(1) Artificial intelligence algorithms and their applications; (2)  Computer Vision; (3) pattern recognition; (4) Medical Image Imaging, Analysis and Processing; (5) Medical Signal Image Processing and Analysis.
         </li>
-        <br>
-        <li>
-            从2008年开始，主持国家杰出青年科学基金、973科技计划、863科技计划、江苏省自然科学基金、国家重点研发计划、江苏省科技计划重点项目、广东省科技创新战略计划等各类基金项目10余项。
-            目前在研项目包括2项国家自然基金项目、3项国家重点研发项目、1项江苏省科技计划重点项目和1项广东省科技创新战略项目。<br>
-        <br>
+       
 
         <li>先后在《IEEE Transactions on Medical Imaging》、《IEEE Transactions on Image Processing》、《IEEE
             Transactions on
@@ -203,9 +196,9 @@
         <li><strong>硕博士就业前景：</strong>（1）被推荐到斯坦福、耶鲁等世界名牌大学读博；（2）国内外知名公司，且针对就业的研究生，可由导师推荐到校企合作的东南大学研究生实习基地做算法毕业课题，其中企业提供相关住宿和补贴。
         </li>
         <br>
-        <li><strong>人才需求：</strong></li>
-        博士后1-2名/年、博士生1-2名/年、硕士生2-10名/年、本科生1-5名/年。<br>
-        欢迎与我联系申请东南大学博士后（上岗正高、上高副高、至善博士后）职位！邮件地址： <a
+        <li><strong>Talent Demand</strong></li>
+        1 - 2 Postdocs/ Year; 1 - 2 Doctoral Students/ Year; 2- 10 postgraduates/ Year; 1 - 5 undergraduates /Year.<br>
+        Email Address： <a
             href="mailto:chenyang.list@seu.edu.cn">chenyang.list@seu.edu.cn</a>.
         </p>
 </div>
