--- a/english.html
+++ b/english.html
@@ -115,19 +115,19 @@
 
 <!-- The 履历 Section -->
 <div class="w3-container w3-light-grey w3-padding-32 w3-justify" style="max-width:1500px" id="cv">
-    <h2>个人履历</h2>
+    <h2>RECORD</h2>
     <h4><p>
         <li> 2007 - Now, Professor and Doctoral supervisor at School of computer science and engineering, Southeast University.
         </li>
-        <li>2014.9 - 2015.9, worked as a visiting scholar in University of Wisconsin-Madison, USA.
+        <li>September 2014 - September 2015, worked as a visiting scholar in University of Wisconsin-Madison, USA.
         </li>
-        <li>2011.3 - 2013.3, Postdoctor,Institut National de la Santé et de la Recherche Médicale(INSERM),Doctoral Supervisor:Prof.Jean-Louis COATRIEUX and Christine TOUMOULIN.
+        <li>March 2011 - March 2013, Postdoctor,Institut National de la Santé et de la Recherche Médicale(INSERM),Doctoral Supervisor:Prof.Jean-Louis COATRIEUX and Christine TOUMOULIN.
         </li>
-        <li>2008.3 - 2010.3, Postdoctor,Chinese University of Hong Kong,Department of Electronic Engineering,Doctoral Supervisor:Prof. Emma MACPHERSON.
+        <li>March 2008 - March 2010, Postdoctor,Chinese University of Hong Kong,Department of Electronic Engineering,Doctoral Supervisor:Prof. Emma MACPHERSON.
         </li>
-        <li>2002.8 - 2007.8, Doctor, First Military Medical University,Biomedical Engineering.
+        <li>August 2002 - August 2007, Doctor, First Military Medical University,Biomedical Engineering.
         </li>
-        <li>1996.8 - 2001.6, Bachelor,First Military Medical University,Biomedical Engineering.
+        <li>August 1996 - June 2001, Bachelor,First Military Medical University,Biomedical Engineering.
 
 
         </li> 
@@ -135,7 +135,7 @@
 </div>
 <!-- The Projects Section -->
 <div class="w3-container w3-padding-32 w3-justify display_article" id="detail">
-    <h2>个人简介</h2>
+    <h2>DETAILS</h2>
     <p class="w3-justify">
 
     <h4>
@@ -188,12 +188,11 @@
             Recognition)
             学习超分辨率空间国际大赛，指导学生获得亚军等
         </li>
-        <br>
+     
 
-        <li><strong>个人评价：</strong>本人治学严谨、认真务实、勇于创新、视野广阔，不仅教会学生专业知识，还教会他们学术问题的统筹思考方法，而且时常督促、鼓励、指导学生进行课题研究，还和他们一起讨论、思考和解决课题中遇到的难题，三年朝夕相处，几乎所有研究生都能够发表一篇英文期刊论文、撰写一项发明专利。由于本人人脉丰富，很多优秀的毕业生被推荐到斯坦福、耶鲁等世界名牌大学攻读博士学位。
-        </li>
+       
         <br>
-        <li><strong>硕博士就业前景：</strong>（1）被推荐到斯坦福、耶鲁等世界名牌大学读博；（2）国内外知名公司，且针对就业的研究生，可由导师推荐到校企合作的东南大学研究生实习基地做算法毕业课题，其中企业提供相关住宿和补贴。
+        <li><strong>Postgraduate Career Prospercts:</strong> (1) Recommended to Stanford, Yale and other world-renowned Universities for Doctoral Studies; (2) Famous Companies at home and abroad.
         </li>
         <br>
         <li><strong>Talent Demand</strong></li>
@@ -204,7 +203,7 @@
 </div>
 <!--代表工作内容-->
 <div class="w3-container w3-light-grey w3-padding-32 w3-justify" id="work">
-    <h2>代表工作</h2>
+    <h2>WORK</h2>
     <p>
     <h4>
         <li><strong>提出基于非局部先验信息的断层医学图像重建算法</strong></li>
@@ -286,7 +285,7 @@
 
 <!-- The Awards Section -->
 <div class="w3-container w3-padding-32" id="award">
-    <h2>获得奖项</h2>
+    <h2>AWARDS</h2>
     <h4><p>
         <li> 2022年<strong>国家杰出青年人才</strong></li>
         <li> 2021年获得江苏省科学技术奖三等奖</li>
