--- a/english.html
+++ b/english.html
@@ -99,7 +99,7 @@
 
 
         <img src="images/avatar15.jpg" class="w3-circle" alt="icon">
-        <h1>陈阳</h1>
+        <h1>YANG CHEN</h1>
 
        
         <h5><p class="w3-justify"
