--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <img src="images/avatar15.jpg" class="w3-circle" alt="icon">
         <h1>陈阳</h1>
 
-        <h5>东南大学计算机科学与工程学院教授、博士生导师、国家杰出青年科学基金获得者；影像科学与技术实验室常务副主任；</h5>
+        <h5>东南大学计算机科学与工程学院教授、博士生导师、国家杰出青年科学基金获得者；科技部重点研发专项负责人；影像科学与技术实验室常务副主任；</h5>
         <h5><p class="w3-justify"
                style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:1200px">
             IEEE高级会员；东南大学计算机网络与信息集成教育部重点实验室常务副主任；中法生物医学信息研究中心中方副主任；中国生物医学工程学会医学图像信息与控制分会副主任委员；中国图像图形学会医学影像委员会委员；江苏省人工智能学会医学图像专委会常务委员；担任国际期刊《IEEE
